# banking-app

./: Dockerfile  README.md  app.py  docker-compose.yml  models.py  pyproject.toml
connectors/account/: __init__.py  account_routes.py
connectors/auth/: user_auth.py
connectors/transaction/: transaction_routes.py
connectors/user/: user_routes.py
static/css/: style.css
templates/: account.html  account_detail.html  confirm_delete_account.html  create_account.html  home.html  login.html  register.html  transaction.html  transaction_detail.html  user_profile.html
